--- a/styles.css
+++ b/styles.css
@@ -6,29 +6,45 @@
     outline: none;
 }
 
+body{
+    background-color: beige;
+}
 .container{
-    margin:10px;
-    padding:20px;
+    margin: 10px;
+    padding: 20px;
     border: 1px solid #bbb0b0;
+    width: 350px;
+    height: auto;
+    position: absolute;
+    left: 29rem;
+    top: 2rem;
 }
 
 .display{
     display: flex;
     justify-content: flex-end;
-    background-color: grey;
+    background-color: black;
+    color: white;
+    width: 308.5px;
+    padding: 100px 45px;
+    padding-bottom: 5px;
+    font-size: 2rem;
 }
 
 .all-buttons{
     display: grid;
     grid-template-columns: 50px 50px 50px 50px;
-    grid-gap: 5px;
+    grid-gap: 9px;
     padding: 40px;
+    padding-top: 10px;
     background-color: #000;
+    font-weight: 500;
 }
 
 .all-buttons > button{
-    padding: 10px 0;
-    border-radius: 5px;
+    padding: 13px 0px;
+    border-radius: 50px;
+    border-style: none;
 }
 
 .number-0{
@@ -37,5 +53,11 @@
 }
 
 .numbers{
-    background-color: green;
+    background-color: rgb(105, 105, 105);
+    color: #fff;
+}
+
+.op{
+    background-color: rgb(255, 172, 64);
+    color:#fff;
 }
